# ai-reviewer-analysis

./: README.md  analysis.ipynb  pyproject.toml  review_extraction.py
review_critique_data/: ReviewCritique_LLM.jsonl
